...
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/load_animation"
        android:visibility="gone"
        app:lottie_speed="1" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/discoveredAdventures"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="0dp"
...
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:text="Choose and Create Adventures!"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/create_adventure"
            android:layout_width="48dp"
...
