...
    android:layout_width="320dp"
    android:layout_height="500dp"
    android:background="@color/lightPink"
    android:padding="5dp"
    android:layout_gravity="center">
    <TextView
        android:id="@+id/goBack"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:textColor="@color/lightGray"
        android:text="@string/discard_change_caption"
        android:textSize="25px"
        android:textStyle="bold"
...

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:text="Biography"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/biographyInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/rectangle_border"
...

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/confirmButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_btn"
            android:gravity="center"
            android:text="Confirm Change"
            android:textSize="14sp"

            />
    </RelativeLayout>


...
