<resources>
    <string name="app_name">gruwup</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="app_title">Gruwup</string>
    <string name="start_adventure_caption">Your  adventures  start  here ...</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="discard_change_caption">Discard Changes</string>
    <string name="default_web_client_id">613845440821-5v295epa113l4fig6nm9vd3s249tfvch.apps.googleusercontent.com</string>

    <string name="connection_address">10.0.2.2</string>
    <string name="enter_message">Enter Message</string>
</resources>