...

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/edit_profile_button"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="right"

                android:layout_marginLeft="7dp"
                android:layout_marginTop="40dp"
...
